fix: text overlapping in Market/Yours dropdown

--- a/web/src/components/Dropdown/Dropdown.pcss
+++ b/web/src/components/Dropdown/Dropdown.pcss
@@ -58,7 +58,6 @@
     &-menu {
       background: var(--dropdown-background-color);
       padding: 0;
-      width: 100%;
       box-shadow: 0px 6px 12px var(--header-shadow-color-level-1);
       border: none;
       z-index: 10000;
